# Zenvra

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONFIG_GUIDE.md  CONTRIBUTING.md  Cargo.toml  ISSUE_DRAFT.md  README.md  SESSION_SUMMARY.md  docker-compose.yml
.github/: CODEOWNERS  branch-protection.json  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml  security_vulnerability.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
apps/web/: Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
apps/web/src/: app.css
apps/web/src/lib/: api.test.ts  api.ts
apps/web/src/lib/stores/: aiConfig.svelte.ts  usage.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/history/: +page.svelte
apps/web/src/routes/history/[id]/: +page.svelte
apps/web/src/routes/scan/: +page.svelte
apps/web/src/routes/settings/ai/: +page.svelte
apps/web/src/routes/settings/cve/: +page.svelte
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: engine.rs  finding.rs  language.rs  lib.rs
crates/scanner/src/ai/: anthropic.rs  custom.rs  google.rs  mod.rs  openai.rs
crates/scanner/src/engines/: ai_code.rs  mod.rs  sast.rs  sca.rs  secrets.rs
crates/scanner/tests/: integration.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: main.rs
crates/server/src/cve_sync/: mod.rs
docs/: issues-index.md  issues-plan.md
docs/issues/: 01-rust-workspace-setup.md  02-sast-engine.md  03-16-remaining-issues.md
extensions/vscode/: LICENSE  build-vsix.cjs  eslint.config.js  package-vsix.cjs  package.json  pnpm-lock.yaml  polyfill-build.cjs  zenvra-0.1.1-rc.2.vsix  zenvra-0.1.1.vsix
extensions/vscode/src/: extension.ts  sidebarProvider.ts  types.ts
migrations/: 202604040001_create_vulnerabilities_table.sql  202604040002_create_scans_table.sql  202604060001_add_osv_fields.sql  202604280001_add_explanation_to_scan_results.sql
test-fixtures/: README.md  vulnerable_app.py
