[package]
name = "zenvra-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "zenvra"
path = "src/main.rs"

[dependencies]
zenvra-scanner = { path = "../scanner" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored = "2"
indicatif = "0.17"
