[package]
name = "zenvra-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zenvra-scanner = { path = "../scanner" }
axum = { version = "0.8", features = ["macros", "query"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
