[package]
name = "zenvra-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zenvra-scanner = { path = "../scanner" }
axum = { version = "0.7", features = ["macros", "query"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
chrono = { workspace = true }
dotenvy = "0.15"
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
dashmap = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
